# PDS

./: CMakeLists.txt  data.csv  resultaten.csv  runscript.sh
src/helloworldcuda/: cudahello  helloworld  helloworld.cu  runcommand.txt
src/oefening1/: main.cpp  output.txt
src/oefening11/: main.cpp  oefening11
src/oefening12/: oefening12  oefening12.cpp  oefening12.slurm.o_oefening12_1node_2cores  oefening12_1node_2core.slurm  oefening12_2nodes_1core.slurm  oefening12_2nodes_1core.slurm.o_oefening12_2nodex_1core  output_1node_2cores.txt  output_2nodes_1core.txt  output_uitleg.txt
src/oefening13en14/: main.cpp  oef1314  oefening1314.cpp  plot.py  pyproject.toml  resultaten.csv  uitleg.txt
src/oefening15/: SafeQueue.h  a.out  main.cpp  som.h
src/oefening16/: error.txt  oefening16.cpp  oefening16.slurm  output.txt
src/oefening17/: oef17  oefening17.cpp  output.txt
src/oefening18/: false_sharing.csv  oef18  oefening18.cpp  plot.py  pyproject.toml  uitleg.txt
src/oefening19/: main.cpp  output.txt  primes
src/oefening2/: main.cpp  output.txt
src/oefening20/: histogram_omp  main.cpp  output.txt
src/oefening21/: oefening21  oefening21.cu
src/oefening22/: fractal  fractal.cu  fractal.slurm  image2d.cpp  image2d.h  main.cpp
src/oefening23/: main.cu  oefening23  output.txt
src/oefening24/: decrypted.txt  encrypt  encrypt.cpp  encrypt.h  encrypt_cuda.cpp  encrypt_cuda.cu  encrypt_cuda.h  encrypted.txt  encryption.slurm  main.cpp  parameters.h
src/oefening4/: oef4.pythonscript  oef4.slurm.error  oef4.slurm.output  oef4.slurm.txt
src/oefening5/: main.py  (+2 more)
(+3 files in other folders)
